--- a/views/site/dashboard.html
+++ b/views/site/dashboard.html
@@ -22,6 +22,17 @@
 <div class="col-2 offset-md-5" style="font-size: x-large;">
     {{ time | date:'medium'}}
 </div>
+<br>
+<div class="col-6 offset-md-4" style="font-size: x-large;">
+    <h1>Welcome to Simple Calculator</h1>
+</div>
+<br>
+<div class="col-8 offset-md-2" style="font-size: x-large; text-align:justify">
+    <p>Simple Calculator is angularjs app that allows you performe simple math operations using a custom API. Plus it has a User Management Mecanism that allows you to have a more secure way to access to you. You'll also have credit of $50 because each mathematical
+        operation consumes an amount of it.
+    </p>
+    <p>To performance the mathematical operations <a href="#!/record/create" style="color:rgb(0, 255, 34)">click here</a>
+</div>
 
 <!-- jQuery CDN - Slim version (=without AJAX) <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
     </script>
