--- a/views/site/index.html
+++ b/views/site/index.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="utf-8">
+    <title>Simple Calculator</title>
 
     <!--JQuery Libraries-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
