--- a/views/record/admin.html
+++ b/views/record/admin.html
@@ -1,6 +1,6 @@
 <div ng-include="'../views/site/header.html'"></div>
 <div class="col-md-12">
-    <h3 class="text-center">Record Management</h3>
+    <h3 class="text-center">Records Report</h3>
     <div ng-app="app" ng-init="show_data()">
         <div class="col-8 offset-md-2">
             <div class="table-responsive">
