--- a/views/user/balance.html
+++ b/views/user/balance.html
@@ -17,7 +17,7 @@
 <div ng-include="'../views/site/header.html'"></div>
 <div class="col-md-12">
     <h3 class="text-center">Users Balance</h3>
-    <div ng-init="show_data('custom')">
+    <div ng-init="show_data()">
         <div class="row">
             <!-- <div class="col-md-6">
                     <label>Name</label>
