--- a/views/site/dashboard.html
+++ b/views/site/dashboard.html
@@ -9,8 +9,8 @@
 </div>
 <br>
 <div class="col-8 offset-md-2" style="font-size: x-large; text-align:justify">
-    <p>Simple Calculator is angularjs app that allows you performe simple math operations using a custom API. Plus it has a User Management Mecanism that allows you to have a more secure way to access to you. You'll also have credit of $50 because each mathematical
-        operation consumes an amount of it.
+    <p>Simple Calculator is Angularjs App that allows you to perform simple math operations using a custom API. Plus it has a User Management Mechanism that allows you to have a more secure way to access yourself. You'll also have a credit of $50 because
+        each mathematical operation consumes an amount of it.
     </p>
-    <p>To performance the mathematical operations <a href="#!/record/create" style="color:rgb(0, 255, 34)">click here</a>
+    <p>To perform the mathematical operations please <a href="#!/record/create" style="color:rgb(0, 255, 34)">click here</a>
 </div>
