--- a/views/site/login.html
+++ b/views/site/login.html
@@ -1,4 +1,4 @@
-<div ng-show="!loggedIn" id="logreg-forms">
+<div id="logreg-forms">
     <form class="form-signin" id="myLogin" name="myLogin">
         <h1 class="h3 mb-3 font-weight-normal" style="text-align: center"> Sign in</h1>
         <input type="email" id="inputEmail" class="form-control" name="username" ng-model="username" placeholder="Username" required="true" autofocus="">
